Kyverno/fail-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fail-pod
spec:
  containers:
  - name: nginx
    image: nginx
