Kyverno/add-default-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-default-labels
spec:
  background: true
  rules:
  - name: add-labels
    match:
      any:
      - resources:
          kinds:
          - Pod
          - Deployment
          - Service
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            managed-by: kyverno
            app.kubernetes.io/managed-by: kyverno
